--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,8 @@
 server:
   servlet:
     context-path: /shiro
+
+shiro:
+  hashAlgorithmName: SHA-256  # 加密算法（SHA-256、MD5...）
+  hashIterations: 1           # 加密 Hash 次数
+  salt: SALT                  # 加密盐值
